# covid19-aws-pipeline

./: .gitignore  pyproject.toml  transform.py
extract/: extract.py  manager.py
manager/: manager.py
terraform/: main.tf  terraform.tfvars
terraform/athena_crawlers/: terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/glue/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/redshift/: main.tf  variables.tf
transform/: transform.py
transform/covid19_aws_pipeline/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
transform/covid19_aws_pipeline/models/staging/: sources.yml  stg_caso.sql  stg_caso_full.sql
